--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "segmentio-analytics-react-native-plugin-webengage",
   "version": "0.1.0",
   "description": "The hassle-free way to add WebEngage to Segment analytics in your React-Native app.",
-  "main": "lib/commonjs/index",
+  "main": "dist/cjs/index.js",
   "scripts": {
     "build": "bob build",
     "test": "jest",
@@ -16,7 +16,7 @@
     "ios",
     "android"
   ],
-  "module": "lib/module/index",
+  "module": "dist/esm/index.js",
   "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
@@ -35,19 +35,18 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mamaclean/segment-analytics-react-native-webengage.git",
+    "url": "https://github.com/mamaclean/segmentio-analytics-react-native-plugin-webengage.git",
     "directory": "packages/core"
   },
   "author": "MamaClean (https://www.mamaclean.it/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mamaclean/segment-analytics-react-native-webengage/issues"
+    "url": "https://github.com/mamaclean/segmentio-analytics-react-native-plugin-webengage/issues"
   },
-  "homepage": "https://github.com/mamaclean/segment-analytics-react-native-webengage#readme",
-  "peerDependencies": {
-    "@segment/analytics-react-native": "*"
-  },
+  "homepage": "https://github.com/mamaclean/segmentio-analytics-react-native-plugin-webengage#readme",
   "dependencies": {
+    "@segment/analytics-react-native": "*",
+    "bob-the-bundler": "^3.0.4",
     "react-native-webengage": "^1.2.13"
   },
   "devDependencies": {
@@ -76,5 +75,45 @@
   },
   "engines": {
     "node": ">=12"
+  },
+  "type": "module",
+  "typings": "dist/typings/index.d.ts",
+  "typescript": {
+    "definition": "dist/typings/index.d.ts"
+  },
+  "exports": {
+    ".": {
+      "require": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      },
+      "import": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "default": {
+        "types": "./dist/typings/index.d.ts",
+        "default": "./dist/esm/index.js"
+      }
+    },
+    "./*": {
+      "require": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/cjs/*.js"
+      },
+      "import": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      },
+      "default": {
+        "types": "./dist/typings/*.d.ts",
+        "default": "./dist/esm/*.js"
+      }
+    },
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "directory": "dist",
+    "access": "public"
   }
 }
